Fixed alignment of boxes on smaller screens

--- a/source/stylesheets/landing.css.scss
+++ b/source/stylesheets/landing.css.scss
@@ -127,7 +127,7 @@
   border-radius: 4px;
 
   @media (min-width: 990px) {
-    padding: 40px;
+    padding: 40px 30px;
     margin-bottom: 0;
   }
 
